[gd_scene load_steps=7 format=3 uid="uid://dtgugtwdswpti"]

[ext_resource type="Script" path="res://Game/start.gd" id="1_8ofs0"]
[ext_resource type="PackedScene" uid="uid://yj2uuvm0wbny" path="res://Game/game_menu.tscn" id="3_vthq3"]

[sub_resource type="LabelSettings" id="LabelSettings_sqnp8"]
line_spacing = 30.0
font_size = 40
font_color = Color(0.839216, 0.698039, 0.227451, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0.886275, 0.4)

[sub_resource type="Animation" id="Animation_i3v0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q0iby"]
resource_name = "menu_appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jygb"]
_data = {
"RESET": SubResource("Animation_i3v0d"),
"menu_appear": SubResource("Animation_q0iby")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ofs0")
backgrounds = "res://Resources/Scene1/configs/backgrounds.json"
timeline = "res://Resources/Scene1/timelines/start.json"
videos = "res://Resources/Scene1/configs/videos.json"
sounds = "res://Resources/Scene1/configs/sounds.json"
characters = "res://Resources/Scene1/configs/characters.json"

[node name="LayoutContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.864
anchor_top = -0.003
anchor_right = 1.0
anchor_bottom = 0.076
offset_left = -0.880043
offset_top = 0.240001
offset_right = 3.0
offset_bottom = -0.0800054
text = "Scores: 0"
label_settings = SubResource("LabelSettings_sqnp8")

[node name="GameMenu" parent="." instance=ExtResource("3_vthq3")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1

[node name="MenuPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jygb")
}

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.065
anchor_bottom = 0.029
offset_right = -116.8
offset_bottom = -23.32
text = "Switch Layouts"

[connection signal="loadPicked" from="GameMenu" to="." method="_on_game_menu_load_picked"]
[connection signal="savePicked" from="GameMenu" to="." method="_on_game_menu_save_picked"]
[connection signal="pressed" from="Button" to="." method="next_layout"]
